# rust-grpc-demo

./: .gitignore  Cargo.toml  README.md  build.rs
protos/: echo.proto
src/: async_client.rs  client.rs  server.rs
src/protos/: mod.rs
