[package]
name = "grpc-demo"
version = "0.1.0"
authors = ["shonenada <shonenada@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "protos"
path = "src/protos/mod.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "async_client"
path = "src/async_client.rs"

[dependencies]
futures = "0.1.16"
grpcio = "0.4.0"
tokio = "0.1.11"
protobuf = { version = "2.0.2" }

[workspace]
members = [
]

[build-dependencies]
protoc-grpcio = "0.3.1"
